# obstacle_detector

./: CMakeLists.txt  README.md  package.xml
doc/: Opis.txt  README  instrukcja_obslugi_udev.txt  scan1.txt  scan2.txt  scan3.txt  scan4.txt  scan5.txt  scan6.txt
include/: circle.h  defines.h  figure_fitting.h  kalman.h  obstacle_detector.h  obstacle_tracker.h  obstacle_visualizer.h  point.h  scans2pcl.h  scans_merger.h  segment.h
include/obstacle_detector/: Circle.hpp  Point.hpp  Segment.hpp
launch/: obstacle_detector.launch  scans2pcl.launch  scans_merger.launch  single_scanner.launch  static_scan.launch  two_scanners.launch  virtual_all.launch  virtual_scanner.launch  virtual_scanner_tracking.launch  with_gmapping.launch
msg/: Circle.msg  CircleCloud.msg  CircleObstacle.msg  Obstacles.msg  PointCloud.msg  Segment.msg  SegmentCloud.msg  SegmentObstacle.msg
resources/: combined.rviz  obstacle_detector.rviz
src/: obstacle_detector.cpp  obstacle_tracker.cpp  obstacle_visualizer.cpp  scans2pcl.cpp  scans_merger.cpp  static_scan_pub.cpp  static_scan_publisher.cpp  virtual_obstacle_publisher.cpp
