<?xml version="1.0"?>
<package format="2">
  <name>obstacle_detector</name>
  <version>1.0.0</version>
  <description>Detecting obstacles from laser scanner</description>
  <maintainer email="mateusz.przybyla@doctorate.put.poznan.pl">Mateusz Przybyla</maintainer>
  <author>Mateusz Przybyla</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>tf</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <export>
  </export>
</package>
